Fixed flash msg(fail and success), fixed profile-avatar resizing/cropping

--- a/static/styles.css
+++ b/static/styles.css
@@ -164,13 +164,13 @@ input:focus {
 }
 
 /* flash messages */
-.errorMessage {
+.failureMsg {
   display: block;
   gap: 5px;
   color: rgb(255, 0, 0);
 }
 
-.successMessage {
+.successMsg {
   display: block;
   gap: 5px;
   color: limegreen;
@@ -182,6 +182,13 @@ input:focus {
 
 /* Profile */
 .avatar-container {
+  border: solid 3px white;
   border-radius: 100px;
   overflow: hidden;
+}
+
+#profile-avatar {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
 }
